--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -4,8 +4,8 @@
   <li><a href="/archive.html">articles</a></li>
   <li class="orn">★</li>
   <li><a href="http://github.com/olav">projects</a></li>
-  <!--<li class="orn">★</li>-->
-  <!--<li><a href="http://twitter.com/vandelay">twitter</a></li>-->
+  <li class="orn">★</li>
+  <li><a href="http://twitter.com/vandelay">twitter</a></li>
   <li class="orn">★</li>
   <li><a href="/about.html">about</a></li>
 </ul>
