--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,11 @@
   <link rel="stylesheet" href="/css/syntax.css" type="text/css">
   <!--<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection">-->
   <link rel="stylesheet" href="/css/blank.css" type="text/css" media="screen, projection">
+
+  <meta name="viewport" content="width=320">
+  <meta name="viewport" content="initial-scale=1.0">
+  <meta name="viewport" content="user-scalable=false">
+
 </head>
 <body id="bjorkoy-com">
 <div id="container" class="hyphenate">
