--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,10 +13,8 @@
   <link rel="icon" type="image/png" href="http://bjorkoy.com/images/icon.png?8">
   
   <script type="text/javascript" src="/js/hyphenate.js"></script>
-  <!--<link rel="stylesheet" href="/css/reset.css" type="text/css">-->
   <link rel="stylesheet" href="/css/syntax.css" type="text/css">
-  <!--<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection">-->
-  <link rel="stylesheet" href="/css/blank.css" type="text/css" media="screen, projection">
+  <link rel="stylesheet" href="/css/plain.css" type="text/css">
 
   <meta name="viewport" content="width=320">
   <meta name="viewport" content="initial-scale=1.0">
