--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,68 @@
-</div>
-</body>
-</html>
+<h2><span>❡</span>Olav Bjørkøy</h2>
+
+<ul>
+  <li>Studied Computer Science at <a href="http://www.ntnu.no">NTNU</a></li>
+  <li>Consultant at <a href="http://www.bekk.no">BEKK</a></li>
+  <li>Occasionally on <a href="http://twitter.com/vandelay">Twitter</a></li>
+  <li>More often on <a href="http://github.com/olav">GitHub</a></li>
+  <li>Reachable by <a href="mailto:olav at bjorkoy dot com">email</a></li>
+</ul>
+
+<h2><span>❡</span>Papers</h2>
+
+<ul>
+  <li>
+    <a href="https://github.com/olav/thesis/blob/master/thesis/dist/thesis.pdf?raw=true">Adaptive Aggregation of Recommender Systems</a>
+    <span>
+      <a class="more" href="https://github.com/olav/thesis/blob/master/paper/dist/paper.pdf?raw=true">short version</a>,
+      <a class="more" href="https://github.com/olav/thesis">code</a>
+    </span>
+  <li>
+    <a href="https://github.com/olav/papers/blob/master/competitive.and.cooperative.behavior.in.bio-inspired.ai.pdf?raw=true">
+      Competitive and Cooperative Behavior in Bio-Inspired AI</a>
+  </li>
+  <li>
+    <a href="https://github.com/olav/papers/blob/master/user.modeling.on.the.web.pdf?raw=true">
+      User Modeling on the Web: An Exploratory Review of Recommendation Systems</a>
+  </li>    
+</ul>
+  
+<h2><span>❡</span>Projects</h2>
+
+<ul>
+  <li>
+    <a href="http://www.blueprintcss.org/">Blueprint CSS Framework</a>:
+    Horizontal and vertical grids, and sensible default styling.
+  </li>
+  <li>
+    <a href="https://github.com/olav/RubySOM">RubySOM</a>:
+    Using a SOM (self-organizing map / kohonen map) to solve the TSP.
+  </li>
+  <li>
+    <a href="https://github.com/olav/PyANN">PyANN</a>:
+    Generic Artificial Neural Network Framework in Python.
+  </li>
+  <li>
+    <a href="https://github.com/olav/RubyGA">RubyGA</a>:
+    Genetic Algorithm Framework written in Ruby.
+  </li>
+  <li>
+    <a href="https://github.com/olav/PyPoker">PyPoker</a>:
+    A poker bot capable of playing against human opponents.
+  </li>
+  <li>
+    <a href="https://github.com/olav/dotfiles">Dotfiles</a>:
+    My dotfiles for Ubuntu, mostly for Xmonad, Vim and ZSH.
+  </li>
+</ul>
+
+<h2><span>❡</span>Articles</h2>
+
+<ul class="posts">
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+      <span>{{ post.date | date_to_string }}</span>
+    </li>
+  {% endfor %}
+</ul>
