--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>{% if page.title %}{{ page.title }} (bjorkoy.com){% else %}Olav Bjørkøy (bjorkoy.com){% endif %}</title>
+  <title>{{ page.title }}</title>
   <meta name="author" content="Olav Bjorkoy">
   <meta name="description" content="{% if page.title %}{{page.title}} - {% endif %}Olav Bjorkoy's blog on CSS, Blueprint, HTML, Ruby and anything in-between.">
   <meta name="keywords" content="HTML, CSS, JS, Blueprint, Ruby, Rails, Olav Bjorkoy, Olav">
@@ -18,15 +18,13 @@
   <script type="text/javascript" src="/js/hyphenate.js"></script>
   <link rel="stylesheet" href="/css/syntax.css" type="text/css">
   <link rel="stylesheet" href="/css/screen.css" type="text/css">  
-  <!--<link rel="stylesheet" href="/css/plain.css" type="text/css" media="all">
-  <link rel="stylesheet" href="/css/mobile.css" type="text/css" media="only all and (max-width: 700px)">  -->
-
-  <meta name="viewport" content="width=320">
-  <meta name="viewport" content="initial-scale=1.0">
-  <meta name="viewport" content="user-scalable=false">
 
 </head>
 <body id="bjorkoy-com" class="hyphenate">
 <div id="wrap">
 
-{% include menu.html %}
+{{ content }}
+
+</div>
+</body>
+</html>
