--- a/files/javazone/tronjz/css/jz.css
+++ b/files/javazone/tronjz/css/jz.css
@@ -108,6 +108,8 @@ h2,h3 {
     padding-top:60px;
     padding-bottom:20px;
     text-shadow:1px 1px 1px rgba(0,0,0,0.4);
+    font-size:16px;
+    font-weight:bold;
 }
 
 #menu a:active {
@@ -160,7 +162,7 @@ h2,h3 {
 #main img {
     width:100%;
     margin:1px 0;
-    box-shadow:0 0 10px rgba(0,0,0,0.5);
+    box-shadow:0 0 15px rgba(0,0,0,0.7);
 }
 
 #main h2, #main h3 {
