--- a/files/javazone/tronjz/css/med.css
+++ b/files/javazone/tronjz/css/med.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 900px) and (max-width:1349px) {
+@media screen and (min-width: 860px) and (max-width:1349px) {
 
 /* ----------------------------------------------------- */
 
@@ -13,7 +13,7 @@
 #menu {
     width:820px;
     position:absolute;
-    top:400px;
+    top:440px;
     left:50%;
     margin-left:-410px;
 }
@@ -40,8 +40,7 @@
     position:relative;
     width:100%;
     height:600px;
-    min-width:900px;
-    margin:-40px auto -30px auto;
+    margin:0px auto -30px auto;
     background:url("../img/splash.png") 50% 0 no-repeat; 
     animation: swingy 2s linear infinite alternate;
     -moz-animation: swingy 2s linear infinite alternate;
@@ -53,10 +52,8 @@
     position:absolute;
     width:100%;
     height:590px;
-    min-width:900px;
-    margin:0 auto 0 auto;
-    background:url("../img/top.png") bottom left repeat-x; 
-    
+    margin:50px auto 0 auto;
+    background:url("../img/top.png") top left repeat-x;    
 }
 
 }
