--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,21 +4,23 @@
   <meta charset="utf-8">
   <title>{% if page.title %}{{ page.title }} (bjorkoy.com){% else %}Olav Bjørkøy (bjorkoy.com){% endif %}</title>
   <meta name="author" content="Olav Bjorkoy">
-  <meta name="description" content="{% if page.title %}{{page.title}} - {% endif %}Olav Bjorkoy's blog on CSS, Blueprint, HTML, Ruby and anything in-between.">
-  <meta name="keywords" content="HTML, CSS, JS, Blueprint, Ruby, Rails, Olav Bjorkoy, Olav">
-  
+  <meta name="description" content="{% if page.title %}{{page.title}} - {% endif %}">
+
   <!-- <link href="/atom.xml" rel="alternate" title="bjorkoy.com" type="application/atom+xml"> -->
   <link href="http://feeds.feedburner.com/bjorkoy" rel="alternate" title="bjorkoy.com" type="application/atom+xml">
   <meta name="google-site-verification" content="7vDyCyvSym2pZLSBnjl1IrtN-hp00gqMfNG8fbHNXyM">
-  <link rel="icon" type="image/png" href="http://bjorkoy.com/images/icon.png?8">
+  <link rel="icon" type="image/png" href="/images/icon.png?223">
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400,600' rel='stylesheet' type='text/css'>
 
-  <script type="text/javascript" src="http://use.typekit.com/zmq0szj.js"></script>
-  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-    
-  <script type="text/javascript" src="/js/hyphenate.js"></script>
-  <link rel="stylesheet" href="/css/syntax.css" type="text/css">
-  <link rel="stylesheet" href="/css/screen.css" type="text/css">  
+  <script src="/js/jquery.js"></script>
+  <script src="/js/main.js"></script>
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/syntax.css">
+  <link rel="stylesheet" href="/css/screen.css">
 
 </head>
-<body id="bjorkoy-com" class="hyphenate">
-<div id="wrap">
+<body id="bjorkoy-com">
+<div class="so"><a href="/"><img src="/images/icons.png"></a></div>
+
+<div class="wrap">
