--- a/css/screen.css
+++ b/css/screen.css
@@ -1,105 +1,70 @@
-* {
-  margin:0;
-  padding:0; }
+html { font-size: 18px; font-weight: 300; line-height: 1.7; color: #332; background: #fdfdfd; }
+html { font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial sans-serif; }
+body { padding: 10%; }
 
-body {
-  line-height:1.5;
-  font-size:0.9em;
-  font-family: ff-tisa-web-pro-1,ff-tisa-web-pro-2,serif; }
+a { text-decoration: none; color: #332; border-bottom: 1px solid #332; }
+h2 { font-weight: 300; font-size: 2em; line-height: 1.3; margin: 0 0 1.6em 0; max-width: 11em; }
+h3 { font-weight: 300; font-size: 1.4em; margin: 2em 0 1em 0; }
+hr { display: none; }
 
-#wrap {
-  padding:7%;
-  max-width:650px;
-  margin:0; }
+ul, ol { margin: 0 0 1em 0; padding: 0; max-width: 30em; text-align: justify; }
+ul { list-style-type: circle; }
+li { line-height: 1.5; margin: 0 0 1em 0; position: relative; }
 
-#me {
-  width:15em;
-  position:absolute;
-  top:5%;
-  right:5%; }
+p { max-width: 30em; margin: 0 0 1em 0; }
+p strong { font-weight: 300; }
+p code { font-size: .8em; font-weight: 300; }
+pre { font-size: .8em; overflow: scroll; white-space: pre; margin: 2em 0; }
+code { font-family: 'Source Code Pro'; }
 
-h2,h3,h4,h5,h6,p,ul,ol,pre {
-  margin-bottom:1em;
-  font-weight:normal;
-  color:#000; }
-pre {
-  margin:2em 0; }
-h1,h2,h3,h4,h5,h6 {
-  font-family: ff-tisa-web-pro-1,ff-tisa-web-pro-2,serif; }
-
-h3,h4,h5,h6 {
-  padding:1em 0 0 0; }
-
-h2 {
-  font-size:1.2em;
-  margin-bottom:0.5em;
-  position:relative; }
-
-h2 span {
-  position:absolute;
-  top:0;
-  left:-2em;
-  color:#ddd; }
-
-hr {
-  border:none; 
-  background:none;
-  color:#fff;
-  background:#fff;
-  padding:4em 0; }
-
-a {
-  color:#000;
-  text-decoration:none; }
-a:hover {
-  color:#000; }
-
-p {
-  text-align:justify;
-  color:#222; }
-
-p a, ul a, ol a {
-  color:#930; }
-
-p strong {
-  background:#F1EFD8;
-  font-weight:normal; 
-  padding:0 0.1em; 
-  margin:0 -0.1em; }
-
-ul,ol {
-  padding:0 0 1em 0;
-  list-style-type:none;
+.wrap {
+  -webkit-animation: fade 500ms;
+  -moz-animation: fade 500ms;
+  animation: fade 500ms;
 }
-li {
-  padding:0.1em 0; }
-ul span {
-  color:#ccc;
-  padding:0 0 0 .5em; }
-ul span a {
-  color:#999; }
 
+.so { margin: -1em 0 4.5em 0; width: 40px; height: 17px; }
+.so a { border: none; }
+.so img { width: 40px; height: 17px; margin: 0; padding:1em 0; }
 
-pre,blockquote {
-  font-size:0.9em; 
-  padding:2em; 
-  background:#f9f9f9;
-  overflow:auto;
-  -webkit-shadow:inset 0 0 5px rgba(0,0,0,0.1);
-  -moz-shadow:inset 0 0 5px rgba(0,0,0,0.1);
-  box-shadow:inset 0 0 5px rgba(0,0,0,0.1); }
-
-.post {
-  font-size:1.1em; }
-.post h2 {
-  font-size:2em;
-  padding:0 0 1em 0; }
-.post h3 {
-  font-size:1.4em; }
-.post ul, .post ol {
-  padding:0 0 1em 2em; }
-
-
-@media all and (max-width:1200px) {
-  h2 span { display:none; }
+.so img {
+  -webkit-transition: -webkit-transform 0.4s ease-in-out;
+  -moz-transition: -moz-transform 0.4s ease-in-out;
+  transition: transform 0.4s ease-in-out;
 }
+
+.so img:hover {
+  -webkit-transform: rotate(-180deg);
+  -moz-transform: rotate(-180deg);
+  transform: rotate(-180deg);
+}
+
+.post { margin: 0 0 4em 0; }
+.post img { max-width: 100%; }
+
+.img a { display: block; border: none; margin: 3.5em 0 3.5em 0; }
+.img img { box-shadow:0 1px 2px rgba(0,0,0,0.2); }
+
+.date { margin: 4em 0 10em 0; }
+.top { border-top: 1px solid #332; margin: 0; }
+
+.intro h2 { display: none; font-size: 1em; margin: 0 0 1em 0; line-height: 1.5; text-transform: uppercase; }
+.intro ul { margin: 0 0 3.5em 0; list-style-type: none; max-width: none; text-align: left; }
+.intro .last { margin-bottom: 0; }
+.intro li { line-height: 1.5; margin: 0 0 .5em 0; }
+.intro strong { font-weight: 300; }
+.intro strong { display: inline-block; width: 6em; padding:0 1em 0 0; text-align: right; }
+.items a.more { margin: 0 0 0 .7em; }
+
+@media (max-width: 50em) {
+  h2 { margin: 0 0 1em 0; }
+  .so { margin: -1em 0 3em 0; }
+  .intro ul { margin: 0 0 3em 0; }
+  .items strong { margin: .2em 0 0 0; display: block; text-align: left; width: auto; }
+  .items li { margin: 0 0 1em 0; }
+  .date { margin: 2em 0; }
+}
+
+@keyframes fade { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fade { from { opacity:0; } to { opacity:1; } }
+@-webkit-keyframes fade { from { opacity:0; } to { opacity:1; } }
