--- a/css/screen.css
+++ b/css/screen.css
@@ -16,14 +16,14 @@ p strong { font-weight: 400; font-style: italic; }
 p code { font-size: .8em; font-weight: 400; }
 pre { font-size: .75em; overflow: auto; white-space: pre; margin: 2em 0; }
 code { font-family: 'Source Code Pro'; font-weight: 400; }
-blockquote { font-style: italic; margin: 2em 0 2em 2em; }
+blockquote { font-style: italic; margin: 1em; }
 
 .post { margin: 0 0 8em 0; }
 .post p, .post ul, .post ol, .post h2, .post h3, .post h4 { max-width: 34em; }
 .post ul, .post ol { margin: 2em 0; }
 .post li { margin: .25em 0; }
-.post img { width: auto; max-width: 100%; }
-.post figure { margin: 2em 0; overflow: hidden; max-width: 34em; }
+.post img { width: auto; max-width: 100%; border-radius: .2em; margin: 2em 0; }
+.post figure { margin: 3em 0; }
 .post object { margin: 0 auto; }
 .img a { display: block; border: none; margin: 3.5em 0 3.5em 0; }
 
@@ -49,4 +49,5 @@ blockquote { font-style: italic; margin: 2em 0 2em 2em; }
 @media (max-width: 30em) {
   html { font-size:16px; }
   .not-min { display: none; }
+  .post img { margin: 1em 0; }
 }
