--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,7 @@
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
   <script src="/js/jquery.js"></script>
+  <script src="/js/retina.js"></script>
   <script src="/js/main.js"></script>
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/syntax.css">
