--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,31 @@
   <li>I'm reachable by <a href="mailto:olav at bjorkoy dot com">email</a>.</li>
 </ul>
 
-<ul class="items projects">
+<ul class="items posts">
+  {% for post in site.posts limit:11 %}
+    <li>
+      <strong>{{ post.date | date_to_string }}</strong>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
+
+<ul class="items">
+  <li>
+    <a href="/files/papers/adaptive.aggregation.of.recommender.systems.pdf">Adaptive Aggregation of Recommender&nbsp;Systems</a>
+    <a class="more" href="/files/papers/adaptive.aggregation.of.recommender.systems.short.pdf">short version</a>
+    <a class="more" href="https://github.com/olav/thesis">code</a>
+  <li>
+    <a href="/files/papers/competitive.and.cooperative.behavior.in.bio-inspired.ai.pdf">
+      Competitive and Cooperative Behavior&nbsp;in&nbsp;Bio-Inspired&nbsp;AI</a>
+  </li>
+  <li>
+    <a href="/files/papers/user.modeling.on.the.web.pdf">
+      User Modeling on the Web: A Review of Recommendation Systems</a>
+  </li>
+</ul>
+
+<ul class="items projects last">
   <li>
     <strong><a href="https://github.com/olav/pacbot">Pacbot</a></strong>
     <span>A fast static site generator, built for large single-page&nbsp;webapps.</span>
@@ -52,30 +76,6 @@
     <strong><a href="https://github.com/olav/dotfiles">Dotfiles</a></strong>
     <span>My dotfiles for Ubuntu, mostly for Xmonad, Vim and&nbsp;ZSH.</span>
   </li>
-</ul>
-
-<ul class="items">
-  <li>
-    <a href="/files/papers/adaptive.aggregation.of.recommender.systems.pdf">Adaptive Aggregation of Recommender&nbsp;Systems</a>
-    <a class="more" href="/files/papers/adaptive.aggregation.of.recommender.systems.short.pdf">short version</a>
-    <a class="more" href="https://github.com/olav/thesis">code</a>
-  <li>
-    <a href="/files/papers/competitive.and.cooperative.behavior.in.bio-inspired.ai.pdf">
-      Competitive and Cooperative Behavior&nbsp;in&nbsp;Bio-Inspired&nbsp;AI</a>
-  </li>
-  <li>
-    <a href="/files/papers/user.modeling.on.the.web.pdf">
-      User Modeling on the Web: A Review of Recommendation Systems</a>
-  </li>
-</ul>
-
-<ul class="items posts last">
-  {% for post in site.posts limit:11 %}
-    <li>
-      <strong>{{ post.date | date_to_string }}</strong>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
-  {% endfor %}
 </ul>
 
 </div>
