--- a/css/screen.css
+++ b/css/screen.css
@@ -2,7 +2,7 @@ html { font-size: 20px; line-height: 1.5; color: #111; background: #fdfdfd; }
 html { font-family: "freight-text-pro-1", "freight-text-pro-2"; font-weight: 300; }
 body { padding: 10%; }
 
-a { color:#111; }
+a { color:#111; text-decoration: none; border-bottom: 1px solid #111; }
 h2 { font-weight: normal; font-size: 1.4em; margin: 0 0 1.5em 0; }
 h3 { font-weight: bold; font-size: 1em; margin: 2em 0 1em 0; }
 hr { display: none; }
