--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <div class="intro">
 
 <ul class="colophon">
-  <li>Hi, I'm Olav.</li>
-  <li>I'm occasionally on <a href="http://twitter.com/vandelay">Twitter</a>.</li>
-  <li>I'm more often on <a href="http://github.com/olav">GitHub</a>.</li>
-  <li>I'm reachable by <a href="mailto:olav at bjorkoy dot com">email</a>.</li>
+  <li>Hi, I'm Tejas.</li>
+  <li>I'm occasionally on <a href="http://twitter.com/tejasmanohar">Twitter</a>.</li>
+  <li>I'm more often on <a href="http://github.com/tejasmanohar">GitHub</a>.</li>
+  <li>I'm reachable by <a href="mailto:me@tejas.io">email</a>.</li>
 </ul>
 
 <ul class="items posts">
