--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>{% if page.title %}{{ page.title }}{% else %}Olav Bjørkøy{% endif %}</title>
-  <meta name="author" content="Olav Bjorkoy">
+  <title>{% if page.title %}{{ page.title }}{% else %}Tejas Manohar{% endif %}</title>
+  <meta name="author" content="Tejas Manohar">
   <meta name="description" content="{% if page.title %}{{page.title}}{% else %}Olav Bjørkøy{% endif %}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- <link href="/atom.xml" rel="alternate" title="bjorkoy.com" type="application/atom+xml"> -->
-  <link href="http://feeds.feedburner.com/bjorkoy" rel="alternate" title="bjorkoy.com" type="application/atom+xml">
-  <meta name="google-site-verification" content="7vDyCyvSym2pZLSBnjl1IrtN-hp00gqMfNG8fbHNXyM">
+  <link href="http://feeds.feedburner.com/tejasmanohar" rel="alternate" title="tejas.io" type="application/atom+xml">
+  
   <link rel="icon" type="image/png" href="/images/icon.png">
   <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400,600' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="//use.typekit.net/zmq0szj.js"></script>
@@ -23,5 +22,5 @@
   <link rel="stylesheet" href="/css/screen.css">
 
 </head>
-<body id="bjorkoy-com">
+<body id="tejas-io">
 <div class="wrap">
