--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,48 +18,8 @@
 
 <ul class="items projects last">
   <li>
-    <strong><a href="https://github.com/olav/pacbot">Pacbot</a></strong>
-    <span>A fast static site generator, built for large single-page&nbsp;webapps.</span>
-  </li>
-  <li>
-    <strong><a href="https://github.com/olav/tag.js">Tag.js</a></strong>
-    <span>An experiment in writing HTML using plain JavaScript&nbsp;functions.</span>
-  </li>
-  <li>
-    <strong><a href="https://github.com/olav/scene.js">Scene.js</a></strong>
-    <span>A small JavaScript library for rendering view&nbsp;models.</span>
-  </li>
-  <li>
-    <strong><a href="https://github.com/olav/dispatch.js">Dispatch.js</a></strong>
-    <span>A simple library for routing hash change events to&nbsp;handlers.</span>
-  </li>
-  <li>
-    <strong><a href="http://superherojs.com">Superhero.js</a></strong>
-    <span>A collection of resources on how to build large single page webapps.</span>
-  </li>
-  <li>
-    <strong><a href="http://www.blueprintcss.org/">Blueprint CSS</a></strong>
-    <span>Horizontal and vertical grids, and sensible default&nbsp;styling.</span>
-  </li>
-  <li>
-    <strong><a href="https://github.com/olav/RubySOM">RubySOM</a></strong>
-    <span>Using a SOM (Kohonen map) to solve the&nbsp;TSP.</span>
-  </li>
-  <li>
-    <strong><a href="https://github.com/olav/PyANN">PyANN</a></strong>
-    <span>Generic Artificial Neural Network Framework in&nbsp;Python.</span>
-  </li>
-  <li>
-    <strong><a href="https://github.com/olav/RubyGA">RubyGA</a></strong>
-    <span>Genetic Algorithm Framework written in&nbsp;Ruby.</span>
-  </li>
-  <li>
-    <strong><a href="https://github.com/olav/PyPoker">PyPoker</a></strong>
-    <span>A poker bot capable of playing against human&nbsp;opponents.</span>
-  </li>
-  <li>
-    <strong><a href="https://github.com/olav/dotfiles">Dotfiles</a></strong>
-    <span>My dotfiles for Ubuntu, mostly for Xmonad, Vim and&nbsp;ZSH.</span>
+    <strong><a href="https://github.com/olav/pacbot">Node Schedule</a></strong>
+    <span>A cron-like and not-cron-like job scheduler for Node.</span>
   </li>
 </ul>
 
