i helped in boris

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,8 +18,24 @@
 
 <ul class="items projects last">
   <li>
-    <strong><a href="https://github.com/olav/pacbot">Node Schedule</a></strong>
-    <span>A cron-like and not-cron-like job scheduler for Node.</span>
+    <strong><a href="https://github.com/tejasmanohar/node-schedule">NSchedule</a></strong>
+    <span>A flexible job scheduler for Node</span>
+  </li>
+  <li>
+    <strong><a href="https://github.com/tejasmanohar/omnus">Boris</a></strong>
+    <span>A tiny PHP REPL</span>
+  </li>
+  <li>
+    <strong><a href="https://github.com/tejasmanohar/npm-algos">NAlgos</a></strong>
+    <span>Curated list of Node algorithm implementations</span>
+  </li>
+  <li>
+    <strong><a href="https://github.com/tejasmanohar/twilio-plays-2048">TWP2048</a></strong>
+    <span>Multiplayer 2048 over SMS</span>
+  </li>
+  <li>
+    <strong><a href="https://github.com/tejasmanohar/omnus">Omnus</a></strong>
+    <span>Offline mobile music streaming server</span>
   </li>
 </ul>
 
