--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
     <span>A flexible job scheduler for Node</span>
   </li>
   <li>
-    <strong><a href="https://github.com/tejasmanohar/omnus">Boris</a></strong>
+    <strong><a href="https://github.com/borisrepl/boris">Boris</a></strong>
     <span>A tiny PHP REPL</span>
   </li>
   <li>
