--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,7 @@
 
 <ul class="colophon">
   <li>Hi, I'm Tejas.</li>
-  <li>I'm occasionally on <a href="http://twitter.com/tejasmanohar">Twitter</a>.</li>
-  <li>I'm more often on <a href="http://github.com/tejasmanohar">GitHub</a>.</li>
-  <li>I'm reachable by <a href="mailto:me@tejas.io">email</a>.</li>
+  <li>I'm an entrepreneur and engineer from Nashville. I love to architect systems and write code. I'm currently the Lead Engineer at <a href="https://autolotto.com">AutoLotto</a>, a startup making it possible for anyone to buy lottery tickets from a smartphone. I also have work experience at <a href="https://hubspot.com">HubSpot</a>, <a href="https://populr.me">Populr</a>, <a href="https://orchestrate.io/">Orchestrate</a> (acquired by <a href="https://www.centurylinkcloud.com/">CenturyLink</a>), and <a href="http://chopdawg.com/">Chop Dawg</a>.</li>
 </ul>
 
 <ul class="items posts">
