--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,9 @@
 
 <ul class="colophon">
   <li>Hi, I'm Tejas Manohar.</li>
-  <li>I'm an entrepreneur and engineer from Nashville. I love to architect systems and write code.</li>
-  <li>I'm currently the Lead Engineer at <a href="https://autolotto.com">AutoLotto</a>, a startup making it possible for anyone to buy lottery tickets from a smartphone. I also have work experience at <a href="https://hubspot.com">HubSpot</a>, <a href="https://populr.me">Populr</a>, <a href="https://orchestrate.io/">Orchestrate</a> (acquired by <a href="https://www.centurylinkcloud.com/">CenturyLink</a>), and <a href="http://chopdawg.com/">Chop Dawg</a>.</li>
+  <li>I'm an entrepreneur and developer from Nashville. I've been coding since age 9 when I stumbled upon some HTML source.</li>
+  <li>I'm currently the Lead Engineer at <a href="https://autolotto.com">AutoLotto</a>, a startup making it possible for anyone to buy lottery tickets from a smartphone.</li>
+  <li>I also have experience at <a href="https://hubspot.com">HubSpot</a>, <a href="https://populr.me">Populr</a>, <a href="https://orchestrate.io/">Orchestrate</a> (acquired by <a href="https://www.centurylinkcloud.com/">CenturyLink</a>), and <a href="http://chopdawg.com/">Chop Dawg</a>.</li>
   <li>I'm often on <a href="https://twitter.com/tejasmanohar">Twitter</a>, always on <a href="https://github.com/tejasmanohar">GitHub</a>, and occasionally check <a href="mailto:me@tejas.io">email</a>.</li>
 </ul>
 
