--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
   <li>I'm an entrepreneur and developer from Nashville. I've been coding since age 9 when I stumbled upon some HTML source.</li>
   <li>I'm currently the Lead Engineer at <a href="https://autolotto.com">AutoLotto</a>, a startup making it possible for anyone to buy lottery tickets from a smartphone.</li>
   <li>I also have experience at <a href="https://hubspot.com">HubSpot</a>, <a href="https://orchestrate.io/">Orchestrate</a> (acquired by <a href="https://www.centurylinkcloud.com/">CenturyLink</a>), <a href="https://studentrnd.org">StudentRND</a>, and <a href="https://populr.me">Populr</a>.</li>
-  <li>I'm often on <a href="https://twitter.com/tejasmanohar">Twitter</a>, always on <a href="https://github.com/tejasmanohar">GitHub</a>, and occasionally check <a href="mailto:me@tejas.io">email</a>.</li>
+  <li>I'm often on <a href="https://twitter.com/tejasmanohar">Twitter</a>, always on <a href="https://github.com/tejasmanohar">GitHub</a>, and sporadically check <a href="mailto:me@tejas.io">email</a>.</li>
 </ul>
 
 <ul class="items posts">
