--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,8 +11,7 @@
   
   <link rel="icon" type="image/png" href="/images/icon.png">
   <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400,600' rel='stylesheet' type='text/css'>
-  <script type="text/javascript" src="//use.typekit.net/zmq0szj.js"></script>
-  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  <link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
 
   <script src="/js/jquery.js"></script>
   <script src="/js/retina.js"></script>
