--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,8 @@
   
   <link rel="icon" type="image/png" href="/images/icon.png">
   <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400,600' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
+  <script src="//use.typekit.net/ejw6wsd.js"></script>
+  <script>try{Typekit.load();}catch(e){}</script>
 
   <script src="/js/jquery.js"></script>
   <script src="/js/retina.js"></script>
