--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
 {% include head.html %}
 
 <header id="header">
-	<a id="logo" href="{{ site.url }}">
+	<a id="logo" href="/">
 		<img src="https://pbs.twimg.com/profile_images/742241878763032576/3IZ5pt0X.jpg" />
 	</a>
 
-	<h1><a href="{{ site.url }}">Tejas Manohar</a></h1>
+	<h1><a href="/">Tejas Manohar</a></h1>
 	{% include social.html %}
 	{% include nav.html %}
 </header>
