--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
 
 <hr>
 
-<a href="{{ site.url }}">
+<a href="/">
 <h6>
   <i class="fa fa-arrow-left" aria-hidden="true"></i>
   Back to the list of posts
