more green photo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 
 <header id="header">
 	<a id="logo" href="/">
-		<img src="https://pbs.twimg.com/profile_images/742241878763032576/3IZ5pt0X.jpg" />
+		<img src="/public/images/segment-green-profile.jpg" />
 	</a>
 
 	<h1><a href="/">Tejas Manohar</a></h1>
