--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
       {% endif %}
     </title>
     <meta name="description" content="Tejas Manohar is a software engineer." />
+    <meta property="og:image" content="https://tejas.io/public/images/segment-green-profile-og.jpg">
 
     <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,300,700' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
