--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
         Tejas Manohar
       {% endif %}
     </title>
-    <meta name="description" content="Tejas Manohar is a software engineer." />
+    <meta name="description" content="Tejas Manohar is a software engineer that enjoys crafting elegant solutions to real problems." />
     <meta property="og:image" content="https://tejas.io/public/images/segment-green-profile-og.jpg">
 
     <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,300,700' rel='stylesheet' type='text/css'>
